# SDL-minigame

./: CMakeLists.txt  README.md  main.cpp  make.sh
